[gd_scene load_steps=9 format=3 uid="uid://5xjrlqdulx2k"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_rw3mr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o0gs1"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_g7npe"]
material = SubResource("StandardMaterial3D_o0gs1")
radius = 0.75
height = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tsefq"]
height = 1.0
radius = 0.75

[sub_resource type="CylinderShape3D" id="CylinderShape3D_0fjtc"]
height = 1.0
radius = 2.87

[sub_resource type="Animation" id="Animation_aeata"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -3.14159, 0)]
}

[sub_resource type="Animation" id="Animation_48qfx"]
resource_name = "standard"
length = 3.0
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shield:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -3.14159, 0), Vector3(0, 0, 0), Vector3(0, 3.14159, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yf3he"]
_data = {
"RESET": SubResource("Animation_aeata"),
"standard": SubResource("Animation_48qfx")
}

[node name="Player" type="CharacterBody3D"]
collision_layer = 17
axis_lock_angular_x = true
axis_lock_angular_z = true
motion_mode = 1
wall_min_slide_angle = 0.139626
script = ExtResource("1_rw3mr")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)
mesh = SubResource("SphereMesh_g7npe")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.502, 0)
shape = SubResource("CylinderShape3D_tsefq")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.67

[node name="MagneticField" type="Area3D" parent="."]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, 0)
visible = false
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MagneticField"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_0fjtc")

[node name="Magnet" type="Node3D" parent="MagneticField"]
transform = Transform3D(1.25, 0, 0, 0, 1.25, 0, 0, 0, 1.25, 0, 0, 0)

[node name="Shield" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -2.53518e-06, 0, 1, 0, 2.53518e-06, 0, -1, 0, 0.5, 0)
top_level = true
visible = false

[node name="Timer" type="Timer" parent="Shield"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yf3he")
}
autoplay = "standard"

[connection signal="area_entered" from="MagneticField" to="." method="_on_magnetic_field_area_entered"]
[connection signal="area_exited" from="MagneticField" to="." method="_on_magnetic_field_area_exited"]
[connection signal="timeout" from="Shield/Timer" to="." method="_hide_shield"]
